# pyglpainter

./: .gitignore  Makefile  Pipfile  README.md  example.py  mainwindow.py  pyproject.toml  requirements.txt  ui_mainwindow.py
classes/: painterwidget.py  program.py  shader.py
classes/items/: arc.py  circle.py  coord_system.py  gcode_path.py  height_map.py  item.py  ortho_line_grid.py  star.py  text.py
shaders/: heightmap-fragment.c
src/pyglpainter/classes/: painterwidget.py  program.py  shader.py
src/pyglpainter/classes/items/: arc.py  gcode_path.py  item.py  text.py
src/pyglpainter/classes/items/fonts/: font_dutch_blunt.py
test/: example.py  mainwindow.py
test/shaders/: simple2d-vertex.c
