[project]
name = "pyglpainter"
authors = [
  {name = "Michael Franzl", email = "public.michael@franzl.name"},
]
version = "2.0.0"
description = "Minimalistic, modern OpenGL drawing for technical applications"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy ~= 1.26",
  "gcode-machine ~= 1.0",
  "pyopengl ~= 3.1",
  "pyqt5 ~= 5.15"
]
license = {file = "COPYING"}
keywords = ["opengl", "3d", "computer graphics", "visualization", "qt"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
]

[project.urls]
repository = "https://github.com/michaelfranzl/pyglpainter"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
  "Makefile",
  ".*",
  "test",
]
